objects/Component__c.object
<CustomObject>
    <description>qawsedrf</description>
    <fields>
        <fullName>CRC32__c</fullName>
        <label>CRC32</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Changed_On__c</fullName>
        <label>Changed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Committed_On__c</fullName>
        <label>Committed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Component_Name__c</fullName>
        <label>Component Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component_Type__c</fullName>
        <label>Component Type</label>
        <picklist>
            <picklistValues>
                <fullName>ApexClass</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>ApexComponent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ApexPage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ApexTrigger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AppMenu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ApprovalProcess</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AssignmentRule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AssignmentRules</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoResponseRule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoResponseRules</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BaseSharingRule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CompactLayout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CriteriaBasedSharingRule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CustomApplication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CustomApplicationComponent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CustomField</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CustomLabel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CustomLabels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CustomObject</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CustomPageWebLink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CustomPermission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CustomTab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dashboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DashboardFolder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Document</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DocumentFolder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EmailFolder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EmailTemplate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EmailTemplateFolder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EntitlementProcess</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>File_Name__c</fullName>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <label>Committed By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Updated_By__c</fullName>
        <label>Changed By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Component</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Component_Name__c</columns>
        <columns>Component_Type__c</columns>
        <columns>Last_Updated_By__c</columns>
        <columns>Changed_On__c</columns>
        <columns>Last_Modified_By__c</columns>
        <columns>Committed_On__c</columns>
        <columns>CRC32__c</columns>
        <columns>File_Name__c</columns>
        <columns>Version__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C-{00000}</displayFormat>
        <label>Component Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Components</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>